--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-        <title>Practicing Git</title>
+        <title>Practice</title>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 	<script src="poem.js"></script>
 </head>
